.provarCaches/00D410000011HE0EAM/objects/rstk__syrcptloc__c.object
<CustomObject>
    <description>syrcptloc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrcptloc_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrcptloc_dispid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receipt Disposition ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrcptloc_disptype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receipt Disposition Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrcptloc_disptype_pl__c</fullName>
        <label>Receipt Disposition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Nettable Inventory</fullName>
                </value>
                <value>
                    <fullName>In Receiving</fullName>
                </value>
                <value>
                    <fullName>Interim Disposition Movement</fullName>
                </value>
                <value>
                    <fullName>Into Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syrcptloc_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divsyrcptlocs</relationshipLabel>
        <relationshipName>divsyrcptlocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Receiving Location</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receiving Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>